--- a/pictures.html
+++ b/pictures.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Epicodus Island</h1>
-    <h2>Welcome to the greatest resort ever!</h2>
+    <h2>Pictures</h2>
 
     <h3>Navigation</h3>
     <ul>
@@ -17,7 +17,9 @@
       <li><a href="travel.html">Travel</a></li>
     </ul>
 
-    <p>This is a website for a private island resort that we are building.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    <p>Enjoy these photos of the island resort</p>
+    <img src="img/Picture1.jpeg">
+    <img src="img/picture2.jpeg">
+    <img src="img/picture 3.jpeg"> 
   </body>
 </html>
